# sentinel-value

./: CHANGELOG.md  README.rst  pyproject.toml  run_formatters.sh  run_tests.sh  sentinel_value.py  setup.cfg  test_sentinel_value.py  tox.ini
.github/workflows/: build.yml
docs/: api_reference.rst  conf.py  index.rst  sentinel_value.rst  sentinel_value_api.rst
sentinel_value/: __init__.py  sentinel_value.py
tests/: test_sentinel_value.py
