[tool.poetry]
name = "sentinel-value"
version = "0.3.2"
description = "Sentinel Values - unique objects akin to None, True, False"
license = "MIT"
authors = ["Dmitry Vasilyanov <vdmit11@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/vdmit11/sentinel-value"
documentation = "https://sentinel-value.readthedocs.io"
keywords = ["sentinel", "pep661", "singleton", "missing", "util", "typing"]
exclude = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.6.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.2.0"
black = "^20.8b1"
ipython = "^7.15.0"
isort = "^5.7.0"
mypy = "^0.910"
pylava = "^0.3.0"
pylava-pylint = "^0.0.3"
pytest = "^6.2.5"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0"
pytest-isort = "^2.0.0"
pytest-mypy = "^0.8.1"
python-semantic-release = "^7.19.2"
radon = "^5.1.0"
rpdb = "^0.1.6"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.4.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-toggleprompt = "^0.0.5"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"
major_on_zero = false

[tool.pytest.ini_options]
norecursedirs = "build dist .tox"
addopts = """
    --maxfail=2
    --doctest-modules
    --doctest-glob='*.rst'
    --pylava
    --mypy
    --black
    --isort
    --cov-report=term:skip-covered
    --ignore='./playground.py'
    --ignore-glob='**/.*.py'
    --ignore-glob='.*.py'
    -W ignore::DeprecationWarning
"""

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if 0:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "@overload",
]

[tool.mypy]
python_version = 3.6
show_error_codes = true
warn_unreachable = true
# Almost all flags from mypy --strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
